--- a/css/index.css
+++ b/css/index.css
@@ -1,12 +1,21 @@
-body {
-  background: #e0d6d688;
-  display: flex;
-  justify-content: center;
+*{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  outline: 0;
 }
-
+html,
+body {
+    font-family: "Source Sans Pro", 'Times New Roman';
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    background-color: white;
+    scroll-behavior: smooth;
+} 
 h1 {
   font-size: 30px;
   text-align: justify;
+  color: black;
 }
 
 h2 {
@@ -15,35 +24,39 @@ h2 {
 }
 
 .container {
+  background-image: url(./compostagem1.jpg);
+  background-size: contain;
+  background-repeat: no-repeat;
   display: flex;
-  height: 50%;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   padding: 10px;
   margin-top: 40px;
-  background-image: linear-gradient(
-    to right top,
-    #d2dcc6,
-    #cfd8c2,
-    #ccd3be,
-    #c8cfbb,
-    #c5cbb7
-  );
-}
-section img {
-  width: 100%;
-  height: 50%;
-}
+ }
+ #folhetos .img1{
+  width: 50%;
+  border-radius: 10%;
+  padding: 5px;
+ }
+ #folhetos .img2{
+  width: 50%;
+  border-radius: 10%;
+  padding: 5px;
+ }
+ #folhetos .img3{
+  width: 50%;
+  border-radius: 10%;
+  padding: 5px;
+ }
 section .botao {
   background-color: #4af12f;
   margin: 20px;
 }
 section a {
   text-decoration: none;
-  color: white;
   font-size: 20pt;
-  padding: 100px;
+  padding: 50px;
   text-transform: uppercase;
 }
 
@@ -62,18 +75,15 @@ section a {
 }
 
 .cards {
+  width: 100%;
+  background-color: white;
   display: flex;
   justify-content: center;
   align-items: center;
   margin-top: 15px;
 }
 
-.cards img {
-  width: 50%;
-  padding: 10px;
-  -webkit-transition: -webkit-transform 0.5s ease;
-  transition: transform 0.5s ease;
-}
+
 
 .cards img:hover {
   -webkit-transform: scale(1.1);
@@ -85,14 +95,6 @@ section a {
   justify-content: center;
   align-items: center;
   margin-top: 30px;
-  background-image: linear-gradient(
-    to right top,
-    #d2dcc6,
-    #cfd8c2,
-    #ccd3be,
-    #c8cfbb,
-    #c5cbb7
-  );
 }
 
 .btn-whatsapp {
