--- a/css/header.css
+++ b/css/header.css
@@ -2,18 +2,77 @@
 
 .menu{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     background-color: #2D5016;
-    height: 10vh;
+    height: 9vh;
 }
 
 .menu a{
     color: #fff;
     text-decoration: none;
+    text-transform: uppercase;
+    transition: 0.3s;
+}
 
+.menu a:hover{
+    opacity: 0.7;
+}
+
+.nav-list{
+    display: flex;
+    list-style: none;
+}
+
+.nav-list li{
+    padding: 10px;
+    margin-right: 30px;
 }
 
 .logo{
     font-size: 24px;
+    margin-left: 20px;
+}
+
+.mobile-menu {
+    display: none;
+    cursor: pointer;
+}
+
+.mobile-menu > div {
+    width: 32px;
+    height: 4px;
+    border-radius: 2px;
+    background-color: #fff;
+    margin: 8px;
+}
+
+
+/*Menu mobile*/
+
+@media (max-width:640px){
+    body{
+        overflow-x: hidden;
+    }
+
+    .nav-list{
+        position: absolute;
+        top: 9vh;
+        right: 0;
+        width: 100vh;
+        height: auto;
+        background-color: #2D5016;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+        transform: translateX(100%);
+    }
+
+    .nav-list.active{
+        transform: translateX(0);
+    }
+
+    .mobile-menu{
+        display: block;
+    }
 }
