--- a/css/header.css
+++ b/css/header.css
@@ -1,15 +1,20 @@
 /*Estilos do header*/
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
 
 .menu{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #2D5016;
+    background-color: #3E5902;
     height: 9vh;
 }
 
 .menu a{
-    color: #fff;
+    color: #f2f2f2;
     text-decoration: none;
     text-transform: uppercase;
     transition: 0.3s;
@@ -26,7 +31,7 @@
 
 .nav-list li{
     padding: 10px;
-    margin-right: 30px;
+    margin-right: 10px;
 }
 
 .logo{
@@ -43,7 +48,7 @@
     width: 32px;
     height: 4px;
     border-radius: 2px;
-    background-color: #fff;
+    background-color: #f2f2f2;
     margin: 8px;
 }
 
@@ -61,7 +66,7 @@
         right: 0;
         width: 100vh;
         height: auto;
-        background-color: #2D5016;
+        background-color: #3E5902;
         flex-direction: column;
         align-items: center;
         justify-content: space-around;
