--- a/css/index.css
+++ b/css/index.css
@@ -6,12 +6,12 @@ body {
 
 h1 {
   font-size: 30px;
-  text-align: justify;
+  text-align: center;
 }
 
 h2 {
   font-size: 20px;
-  text-align: justify;
+  text-align: center;
 }
 
 .container {
@@ -20,7 +20,6 @@ h2 {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 10px;
   margin-top: 40px;
   background-image: linear-gradient(
     to right top,
@@ -36,7 +35,7 @@ section img {
   height: 50%;
 }
 section .botao {
-  background-color: #4af12f;
+  background-color: #78A614;
   margin: 20px;
 }
 section a {
@@ -103,9 +102,9 @@ section a {
   border-radius: 50%;
   cursor: pointer;
   background: #34af23;
-  color: #ffffff;
+  color: #f2f2f2;
   font-size: 2.3rem;
-  border: 1px solid #f1f1f1;
+  border: 1px solid #f2f2f2;
   animation-name: pulsar;
   animation-duration: 0.8s;
   animation-timing-function: ease-out;
