--- a/css/header.css
+++ b/css/header.css
@@ -13,14 +13,15 @@
     height: 9vh;
 }
 
-.menu a{
+.menu a{    
     color: #f2f2f2;
     text-decoration: none;
     text-transform: uppercase;
     transition: 0.3s;
 }
 
-.menu a:hover{
+.menu li:hover{    
+    background-color: #5C7346;
     opacity: 0.7;
 }
 
@@ -30,8 +31,8 @@
 }
 
 .nav-list li{
-    padding: 10px;
-    margin-right: 10px;
+    cursor: pointer;
+    padding: 20px;
 }
 
 .logo{
@@ -64,13 +65,25 @@
         position: absolute;
         top: 9vh;
         right: 0;
-        width: 100vh;
+        width: 100%;
         height: auto;
-        background-color: #3E5902;
+        background: #3E5902;
         flex-direction: column;
         align-items: center;
         justify-content: space-around;
         transform: translateX(100%);
+        transition: transform 0.3s ease-in;
+    }
+
+    .nav-list li{
+        text-align: center;
+        width: 100%;
+        padding: 20px 0 20px 0;
+        border-bottom: 1px solid #f2f2f2;
+    }
+
+    .nav-list a{
+        width: 100%;
     }
 
     .nav-list.active{
