--- a/css/header.css
+++ b/css/header.css
@@ -25,6 +25,10 @@
     opacity: 0.7;
 }
 
+.menu li:hover a {    
+    color: #172601;
+}
+
 .nav-list{
     display: flex;
     list-style: none;
@@ -34,6 +38,7 @@
     cursor: pointer;
     padding: 20px;
 }
+
 
 .logo{
     font-size: 24px;
@@ -51,7 +56,23 @@
     border-radius: 2px;
     background-color: #f2f2f2;
     margin: 8px;
+    transition: 0.3s;
 }
+
+/* não está formando x (testar depois) 
+.mobile-menu.active .line1{
+    transform: rotate(-45deg) translate(-8px, 8px); 
+}
+
+.mobile-menu.active .line2{
+    opacity: 0;
+}
+
+.mobile-menu.active .line3{
+    transform: rotate(45deg) translate(-5px, 5px);     
+}
+ */
+
 
 
 /*Menu mobile*/
@@ -63,7 +84,7 @@
 
     .nav-list{
         position: absolute;
-        top: 9vh;
+       top: 9vh;
         right: 0;
         width: 100%;
         height: auto;
@@ -72,7 +93,7 @@
         align-items: center;
         justify-content: space-around;
         transform: translateX(100%);
-        transition: transform 0.3s ease-in;
+        transition: transform 0.5s ease-in;
     }
 
     .nav-list li{
@@ -83,6 +104,7 @@
     }
 
     .nav-list a{
+        display: block;
         width: 100%;
     }
 
@@ -92,5 +114,16 @@
 
     .mobile-menu{
         display: block;
+    }
+}
+
+
+@keyframes navLinkFade{
+    from{
+        opacity: 0;
+        transform: translateX(40px);
+    }
+    to{
+        opacity: 1;
     }
 }
