--- a/css/index.css
+++ b/css/index.css
@@ -1,96 +1,143 @@
-
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    outline: 0;
-    background-color: #E4E9BE;
-}
-
-h1 {
-    font-size: 30px;
-    text-align: justify;
-    color: black;
-}
-
-.cards1 img {
-    display: inline-block;
-    justify-content: center;
-    align-items: center margin: 30px;
-    width: 30%;
-    margin-top: 40px;
-}
-
-section .botao {
-    background-color: #4af12f;
-    margin: 20px;
-}
-
-section {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.texto-inicial {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    margin-top: 20px;
-    margin-bottom: 20px
-}
-
-.cadastro1,
-.cadastro2 {
-    border: 1px solid black;
-    padding: 30px;
-    margin: auto;
-}
-
-.imagens-impactantes {
-    margin-top: 20px;
-    margin-bottom: 20px;
-}
-
-.texto-impacto {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 30px;
-}
-
-#carrocel2 {
-    width: 400px;
-    height: 350px;
-}
-
-
-/*---------------------- CARROSSEL -------------------------*/
-
-#carousel {
-    width: 100%;
-    margin-bottom: 30px;
-    border-top: 1px solid #f5f6f3;
-=======
-*{
   box-sizing: border-box;
   margin: 0;
   padding: 0;
   outline: 0;
+  background-color: #e4e9be;
 }
-html,
-body {
-    font-family: "Source Sans Pro", 'Times New Roman';
-    text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: antialiased;
-    background-color: rgb(202, 250, 230);
-    scroll-behavior: smooth;
-} 
+
 h1 {
   font-size: 30px;
-  text-align: center;
+  text-align: justify;
   color: black;
+}
+
+.cards1 img {
+  display: inline-block;
+  justify-content: center;
+  align-items: center;
+  margin: 30px;
+  width: 30%;
+  margin-top: 40px;
+}
+
+section .botao {
+  background-color: #4af12f;
+  margin: 20px;
+}
+
+section {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.texto-inicial {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.cadastro1,
+.cadastro2 {
+  border: 1px solid black;
+  padding: 30px;
+  margin: auto;
+}
+
+.imagens-impactantes {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.texto-impacto {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 30px;
+}
+
+#carrocel2 {
+  width: 400px;
+  height: 350px;
+}
+/*---------------------- CARROSSEL -------------------------*/
+
+#carousel {
+  width: 100%;
+  margin-bottom: 30px;
+  border-top: 1px solid #f5f6f3;
+}
+
+.carousel-images {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: auto;
+  position: relative;
+}
+
+.carousel-images a {
+  font-size: 2em;
+  padding: 10px;
+  color: white;
+  border: none;
+  border-radius: 10px;
+  background-color: transparent;
+}
+
+.carousel-images a:hover {
+  cursor: pointer;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.carousel-images img {
+  display: none;
+}
+
+.carousel-images .active {
+  display: flex;
+  width: 100%;
+  max-height: 88vh;
+  transition: 0.5s ease;
+}
+
+#left-button {
+  left: 20px;
+  position: absolute;
+}
+
+#rigth-button {
+  right: 20px;
+  position: absolute;
+}
+
+.text-informs {
+  left: 0;
+  right: 0;
+  top: 90%;
+  bottom: 0;
+  margin: auto;
+  font-size: 1.2em;
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  position: absolute;
+  align-items: baseline;
+}
+
+.informs {
+  color: white;
+  font-size: 30px;
+  position: absolute;
+  top: -300px;
+  left: 100px;
+  font-weight: bold;
+  font-style: oblique;
+  text-shadow: 0 0 0.4em #000, 0 0 0.4em #000, 0 0 0.4em #000;
 }
 
 /*seção de cards */
@@ -128,41 +175,4 @@ h1 {
   width: 100%;
   height: 80%;
 }
-
-.content p {
-  text-align: center;
-  color: #011640;
-  font-weight: bold;
-}
 /* Fim sessão de cards */
-
-.btn-whatsapp {
-  position: absolute;
-  outline: none;
-  bottom: 0;
-  right: 30px;
-  border-radius: 50%;
-  cursor: pointer;
-  background: #34af23;
-  color: #ffffff;
-  font-size: 2.3rem;
-  border: 1px solid #f1f1f1;
-  animation-name: pulsar;
-  animation-duration: 0.8s;
-  animation-timing-function: ease-out;
-  animation-delay: 1s;
-  animation-iteration-count: infinite;
-  animation-direction: reverse;
-  animation-fill-mode: none;
-  animation-play-state: running;
-}
-
-@keyframes pulsar {
-  0% {
-    height: 65px;
-    width: 65px;
-  }
-  100% {
-    height: 85px;
-    width: 85px;
-  }
