--- a/css/index.css
+++ b/css/index.css
@@ -1,9 +1,19 @@
+@import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,300;0,400;0,700;1,400&display=swap");
+
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
   outline: 0;
   background-color: #e4e9be;
+}
+html,
+body {
+  font-family: "Source Sans Pro", "Times New Roman";
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  background-color: #b6dbf2;
+  scroll-behavior: smooth;
 }
 
 h1 {
@@ -68,7 +78,6 @@ section {
 
 #carousel {
   width: 100%;
-  margin-bottom: 30px;
   border-top: 1px solid #f5f6f3;
 }
 
@@ -130,10 +139,11 @@ section {
 }
 
 .informs {
+  background: none;
   color: white;
-  font-size: 30px;
+  font-size: 25px;
   position: absolute;
-  top: -300px;
+  top: -150px;
   left: 100px;
   font-weight: bold;
   font-style: oblique;
@@ -147,9 +157,10 @@ section {
   height: 450px;
   align-items: center;
   justify-content: space-around;
-  margin: 30px;
 }
-
+figure.image {
+  border-radius: 20px;
+}
 .card-container {
   background-color: #f5f6f3;
   width: 30%;
@@ -176,3 +187,47 @@ section {
   height: 80%;
 }
 /* Fim sessão de cards */
+
+/*Responsividade mobile */
+
+@media (max-width: 720px) {
+  .text-introdution {
+    margin-bottom: 70px;
+  }
+  /* Responsividade dos cards */
+  .animation-cards {
+    height: 100%;
+    justify-content: center;
+    flex-direction: column;
+  }
+  .card-container {
+    width: 300px;
+    height: 280px;
+    margin-bottom: 70px;
+  }
+  /*Responsividade da seção de artigos */
+  .article-container {
+    padding: 15px;
+  }
+  .article-container figure {
+    text-align: center;
+  }
+  .article-container > div figure img {
+    width: 90%;
+    max-width: 450px;
+    margin-bottom: 20px;
+  }
+}
+
+/* Responsividade para telas maiores*/
+
+@media (min-width: 930px) {
+  .card-container {
+    height: 60%;
+  }
+}
+@media (min-width: 1200px) {
+  .animation-cards {
+    height: 600px;
+  }
+}
