--- a/css/index.css
+++ b/css/index.css
@@ -12,7 +12,7 @@ body {
   font-family: "Source Sans Pro", "Times New Roman";
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
-  background-color: #b6dbf2;
+  background-color: #077c0d;
   scroll-behavior: smooth;
 }
 
