--- a/css/index.css
+++ b/css/index.css
@@ -3,8 +3,9 @@
 html,
 body {
   text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  background-color: #077c0d;
+  -webkit-font-smoothing: antialiased;  
+  background-color: #e4e9be; 
+  /*background-color: #077c0d;*/
   scroll-behavior: smooth;
 }
 
