--- a/css/header.css
+++ b/css/header.css
@@ -94,6 +94,7 @@ header .menu{
         justify-content: space-around;
         transform: translateX(100%);
         transition: transform 0.5s ease-in;
+        z-index: 10;
     }
 
     .nav-list li{
