--- a/index.css
+++ b/index.css
@@ -12,11 +12,10 @@ body {
 }
 
 :root {
-    --cor-primaria-success: rgb(75, 200, 138);
-    --cor-hover-success: rgb(116, 158, 137);
+    --cor-primaria-success: #78A614;;
+    --cor-hover-success: #ffffff;
     --cor-secundaria-success: rgb(27, 66, 50);
 }
-
 h1 {
     font-size: 30px;
     font-weight: 700;
@@ -41,6 +40,7 @@ p {
 section .botao {
     background-color: #78A614;
     margin: 20px;
+
 }
 
 section {
@@ -57,12 +57,19 @@ section {
     margin-top: 20px;
     margin-bottom: 20px;
 }
-
 .cadastro1 {
+    width: 100%;
+    height: 500px;
+   
     display: inline-block;
-    justify-content: center;
+    text-align: center;
     padding: 30px;
-    margin: 20px;
+    
+}
+.user {
+    color: #78A614;
+    text-align: center;
+    margin-top: 50px;
 }
 
 .imagens-impactantes {
@@ -92,7 +99,7 @@ section {
 }
 
 .btn-success {
-    background-color: var(--cor-primaria-success);
+    background-color: #78A614;
     outline: none;
     color: var(--cor-secundaria-success)
 }
@@ -130,7 +137,7 @@ section {
 }
 
 .gallery-items:hover {
-    transform: scale(1.3);
+    transform: scale(1.1);
 }
 
 footer {
