ajustes links CSS e header

--- a/header.css
+++ b/header.css
@@ -9,7 +9,7 @@ header .menu{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #729e12;
+    background-color: #3E5902;
     height: 9vh;
 }
 
