--- a/css/header.css
+++ b/css/header.css
@@ -9,7 +9,7 @@ header .menu{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #729e12;
+    background-color: #78A614;
     height: 9vh;
 }
 
@@ -21,7 +21,7 @@ header .menu{
 }
 
 .menu li:hover{    
-    background-color: #5C7346;
+    background-color: #e7dfdf;
     opacity: 0.7;
 }
 
@@ -88,7 +88,7 @@ header .menu{
         right: 0;
         width: 100%;
         height: auto;
-        background: #3E5902;
+        background: #78A614;
         flex-direction: column;
         align-items: center;
         justify-content: space-around;
@@ -101,7 +101,7 @@ header .menu{
         text-align: center;
         width: 100%;
         padding: 20px 0 20px 0;
-        border-bottom: 1px solid #f2f2f2;
+        border-bottom: 1px solid #e7e4e4;
     }
 
     .nav-list a{
