--- a/css/index.css
+++ b/css/index.css
@@ -314,6 +314,82 @@ figure.image {
 /*seção de cards */
 
 .container {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 1600px;
+    flex-wrap: wrap;
+    z-index: 1
+}
+
+.container .card {
+    position: relative;
+    width: 550px;
+    height: 450px;
+    margin: 30px;
+    box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
+    border-radius: 15px;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-top: 1px solid rgba(47, 79, 79, 0.5);
+    border-left: 1px solid rgba(47, 79, 79, 0.5);
+}
+
+.container .card img {
+    width: 300px;
+    height: 250px;
+}
+
+.container .card .content {
+    padding: 20px;
+    text-align: center;
+    transform: translateY(100px);
+    opacity: 0;
+    transition: 3s;
+}
+
+.container .card:hover .content {
+    transform: translateY(0px);
+    opacity: 1;
+}
+
+.container .card .content h2 {
+    position: absolute;
+    top: -80px;
+    right: 30px;
+    font-size: 1em;
+    color: rgba(rgba(27, 109, 10, 0.192), green, rgb(8, 31, 4), 0.5);
+    pointer-events: none;
+}
+
+.container .card.content h3 {
+    font-size: 1.8em;
+    color: #0ce767;
+    z-index: 1;
+}
+
+.container .card .content p {
+    font-size: 0.5em;
+    color: rgb(10, 48, 3)
+}
+
+.container .card .content a {
+    position: relative;
+    display: inline-block;
+    padding: 8px 20px;
+    margin-top: 15px;
+    background: #243008;
+    text-decoration: none;
+    border-radius: 20px;
+    font-weight: 700;
+    box-shadow: rgba(0, 0, 0, 0.2)
+}
+
+
+/*.container {
     width: 100%;
 }
 
@@ -343,7 +419,7 @@ figure.image {
 .card-container figure {
     width: 100%;
     height: 100%;
-}
+}*/
 
 
 /* Fim sessão de cards */
