--- a/css/carousel.css
+++ b/css/carousel.css
@@ -76,7 +76,7 @@
 }
 
 .containerproje .slide-container:nth-child(1) .slide{
-    background: url(../Imagens/Carrousel/img2.jpeg);
+    background: url(../Imagens/Carrousel/img5.jpeg);
     background-size:cover;
     background-repeat: no-repeat;
     width: 100vw;
@@ -93,6 +93,13 @@
 
 .containerproje .slide-container:nth-child(3) .slide{
     background: url(../Imagens/Carrousel/img4.jpeg);
+    background-size:cover;
+    background-repeat: no-repeat;
+    width: 100vw;
+    height: 100vh;
+}
+.containerproje .slide-container:nth-child(4) .slide{
+    background: url(../Imagens/Carrousel/img2.jpeg);
     background-size:cover;
     background-repeat: no-repeat;
     width: 100vw;
