--- a/css/index.css
+++ b/css/index.css
@@ -234,8 +234,8 @@ footer {
     text-transform: capitalize;
 }
 
-
-/*---------------------- CARROSSEL -------------------------*/
+/* ANALISAR SE CÓDIGOS AINDA SERÂO USADOS, SENÂO EXCLUIR
+/*---------------------- CARROSSEL -------------------------
 
 #carousel {
     width: 100%;
@@ -319,8 +319,8 @@ figure.image {
 /*seção de cards */
 
 .container {
-    width: 900px;
     padding: 20px;
+    margin-bottom: 30px;
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -329,18 +329,19 @@ figure.image {
 
 .container .card {
     position: relative;
-    padding: 10px;
-    width: 300px;
+    width: 280px;
     background-color: #fff;
-    margin: 20px;
+    margin-bottom: 20px;
     border: 1px solid black;
     border-radius: 20px;
     overflow: hidden;
     transition: 0.5s;
-    text-align: center;
-}
+    text-align: center; 
+} 
 
 .container .card img {
+    width: 100%;
+    height: 200px;
     transition: 0.5s;
 }
 
@@ -375,6 +376,7 @@ figure.image {
     background-color: #5a702a;
     color: white;
     margin-top: -30px;
+    margin-bottom: 50px;
     box-shadow: 2px 20px 25px rgba(172, 190, 172, 0.527);
     border-color: black;
 }
